--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ pca-kf-new.R
 
 # Confidential data
 analyses/2performance_fisheries/analyses/lobster_logbooks/output
+analyses/2performance_fisheries/analyses/dive_logbooks/output
