--- a/.gitignore
+++ b/.gitignore
@@ -29,13 +29,9 @@ vignettes/*.pdf
 #MacOS
 .DS_Store
 pca-kf-new.R
-
 # Confidential data
 analyses/2performance_fisheries/analyses/lobster_logbooks/output
 analyses/2performance_fisheries/analyses/dive_logbooks/output
-
 # Large files
 data/habitat_cdfw/shiny_app/data
-
-
-
+Rplot.png
