--- a/.gitignore
+++ b/.gitignore
@@ -30,10 +30,10 @@ vignettes/*.pdf
 .DS_Store
 pca-kf-new.R
 Rplot.png
-
 # Confidential data
 analyses/2performance_fisheries/analyses/lobster_logbooks/output
 analyses/2performance_fisheries/analyses/dive_logbooks/output
-
 # Large files
 data/habitat_cdfw/old/shiny_app/data
+sites.shp
+analyses/7habitat/figures/sites_100m_plots
