--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@ analyses/2performance_fisheries/analyses/dive_logbooks/output
 # Large files
 data/habitat_cdfw/old/shiny_app/data
 analyses/7habitat/figures/sites_1000m_plots/
+# Archived stuff
+analyses/7habitat/archive/
+analyses/7habitat/output/
+
