--- a/.gitignore
+++ b/.gitignore
@@ -39,4 +39,5 @@ analyses/7habitat/figures/sites_1000m_plots/
 # Archived stuff
 analyses/7habitat/archive/
 analyses/7habitat/output/
+analyses/7habitat/figures/archive/
 
